# Kaggle_LuxAI-s3

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  run_all.sh
datas/: publicLB_250211.csv
src/: agent.py  create_sub.py
src/IL/action_model/: convert.py  ds.py  model.py  save_weight.py  train.py
src/IL/action_model/config/: config.yaml  config_ft.yaml  config_ft_sapdropoff.yaml  config_sapdropoff.yaml
src/IL/sap_target_model/: convert.py  ds.py  model.py  save_weight.py  train.py  utils.py
src/IL/sap_target_model/config/: config.yaml  config_ft.yaml  config_ft_sapdropoff.yaml  config_sapdropoff.yaml
src/data_prepare/: add_ignore.py  create_db.py  db_cfg.yaml  make_json_list.py  make_sap_datalist.py
